# alt_generate_zh_name

./: .readthedocs.yaml  README.md  environment.yml  pyproject.toml
docs/source/: alt_generate_zh_name.data.rst  alt_generate_zh_name.rst  conf.py  index.rst  modules.rst
src/alt_generate_zh_name/: __init__.py  generator.py
src/alt_generate_zh_name/data/: __init__.py  given_names.py  surnames.py
tests/: test_generator.py
