[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alt_generate_zh_name"
version = "0.2.0"
description = "一个能自动生成中国学生个人基础信息（姓名、性别、生日）的 Python 包"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "ashida" },
]
keywords = ["chinese", "name", "generator", "student", "fake-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: Chinese (Simplified)",
]
dependencies = [
    "pandas>=2.0",
]

# 声明开发/测试所需的额外依赖
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alt_generate_zh_name"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=alt_generate_zh_name --cov-report=term-missing"
